--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,10 @@ digistore.ipn.passphrase=test123
 # SPRING
 spring.mvc.async.request-timeout=30000
 
+#DB Connection Strings
+spring.datasource.url=jdbc:mysql://localhost:3306/payment_db
+spring.datasource.username=root
+spring.datasource.password=root
+
+
 
