Turn of IPN passphrase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 # DIGISTORE
 digistore.api.key=123-iKWIrTsUTbCyRFuotOdV8yO2xnfMI5b3rZhDCUAG
-digistore.ipn.passphrase=test123
+#digistore.ipn.passphrase=test123
 
 # SPRING
 spring.mvc.async.request-timeout=30000
